--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,49 +1,47 @@
-<div>
-
+<div class="space-y-2">
   <div class="text-sm">
     <%- if controller_name != 'sessions' %>
-      <%= link_to "Log in", new_session_path(resource_name) , class: "text-[var(--text-color)] underline"%><br />
+      <%= link_to "Log in", new_session_path(resource_name), class: "text-[var(--text-color)] hover:text-[var(--dark-color)] underline transition" %>
     <% end %>
   </div>
 
   <div class="text-sm">
-  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Don't Have an Account? Sign up", new_registration_path(resource_name), class: "text-[var(--text-color)] underline" %><br />
-  <% end %>
+    <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+      <%= link_to "Don't Have an Account? Sign up", new_registration_path(resource_name), class: "text-[var(--text-color)] hover:text-[var(--dark-color)] underline transition" %>
+    <% end %>
   </div>
 
   <div class="text-sm">
-  <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Forgot your password?", new_password_path(resource_name), class: "text-[var(--text-color)] underline" %><br />
-  <% end %>
+    <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+      <%= link_to "Forgot your password?", new_password_path(resource_name), class: "text-[var(--text-color)] hover:text-[var(--dark-color)] underline transition" %>
+    <% end %>
   </div>
 
   <div class="text-sm">
-  <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-    <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: "text-[var(--text-color)] underline" %><br />
-  <% end %>
+    <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+      <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: "text-[var(--text-color)] hover:text-[var(--dark-color)] underline transition" %>
+    <% end %>
   </div>
 
   <div class="text-sm">
-  <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-    <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "text-[var(--text-color)] underline" %><br />
-  <% end %>
+    <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
+      <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "text-[var(--text-color)] hover:text-[var(--dark-color)] underline transition" %>
+    <% end %>
   </div>
 
-  <div class="mt-8 space-y-1">
   <%- if devise_mapping.omniauthable? %>
-    <%- resource_class.omniauth_providers.each do |provider| %>
-    <% color_class = case provider.to_s
-        when 'google_oauth2' then "bg-[var(--google-red)]"
-        when 'facebook' then "bg-[var(--facebook-blue)]"
-        else "bg-gray-500"
-      end %>
+    <div class="mt-4 space-y-2">
+      <%- resource_class.omniauth_providers.each do |provider| %>
+        <% color_class = case provider.to_s
+            when 'google_oauth2' then "bg-[var(--google-red)]"
+            when 'facebook' then "bg-[var(--facebook-blue)]"
+            else "bg-gray-500"
+          end %>
 
-      <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider),
-      class: "w-full text-center #{color_class} text-white py-2 rounded hover:opacity-90 transition",
-       data: { turbo: false } %>
-    <% end %>
+        <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider),
+        class: "w-full text-center #{color_class} text-white py-2 rounded hover:opacity-90 transition font-medium",
+         data: { turbo: false } %>
+      <% end %>
+    </div>
   <% end %>
-  </div>
-
 </div>
